# axiom

./: .env.docker  .env.example  .env.host  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  release-notes-v0.2.1.md  ruff.toml
.github/workflows/: ci.yml  tests.yml
apps/api/: Dockerfile  dependencies.py  main.py
apps/axiomatizer/: Dockerfile  main.py
apps/council/: Dockerfile  main.py
apps/web/: .gitignore  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  tsconfig.json
docs/: testing.md  web-architecture.md
docs/architecture/: overview.md
docs/decisions/: 002-slice2-research-loop.md  ADR-001-monorepo-layout.md  ADR-002-queue-backend.md  ADR-003-council-http-boundary.md  ADR-004-vram-constraint.md  ADR-004-wiki.md  ADR-005-axiomatizer-feature-toggle.md
docs/runbooks/: docker-ops.md  local-dev.md
docs/specs/: axiom-v1-build-spec.md
ops/searxng/: settings.yml
scripts/: check-backends.sh  pull-models.sh  research.py  smoke-slice5.sh  stream_inspect.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_research_flow.py
tests/fixtures/: graph-fixture.sample.json  sample_job.json
tests/integration/: test_api_endpoints.py  test_api_smoke.py  test_health.py
tests/unit/: test_api_dependencies_error_paths.py  test_api_dependencies_lifespan.py  test_api_health_contracts.py  test_api_router_axiomatizer_proxy.py  test_api_router_council.py  test_api_router_graph.py  test_api_router_health.py  test_api_router_health_branches.py  (+17 more)
(+51 files in other folders)
