[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-monorepo"
version = "0.1.0"
description = "Axiom — Local Research Workbench monorepo"
authors = [{ name = "rmholston" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.1",
  "uvicorn[standard]>=0.29.0",
  "neo4j>=5.0.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
 "httpx2>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
py-modules = []
